# librarian

./: README.md  __init__.py  catalog.py  cli.py  dedupe.py  docprops.py  organize.py  pyproject.toml  scan.py  settings.py  settings.yml  utils.py
tests/: conftest.py  test_librarian.py
